--- a/package.json
+++ b/package.json
@@ -38,10 +38,7 @@
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.14"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "^6.0.1"
   },
   "engines": {
     "node": ">=18.0.0",
