--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "version": "1.0.0",
   "type": "module",
   "description": "AI-powered quiz generator with PDF export functionality",
-  "keywords": ["quiz", "ai", "education", "pdf", "react", "typescript"],
+  "keywords": [
+    "quiz",
+    "ai",
+    "education",
+    "pdf",
+    "react",
+    "typescript"
+  ],
   "author": "QuizGen AI Team",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:analyze": "tsc -b && vite build --mode analyze",
     "lint": "eslint .",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "analyze": "npx vite-bundle-analyzer dist"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
@@ -35,10 +44,12 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-bundle-analyzer": "^1.2.3"
   },
   "engines": {
     "node": ">=18.0.0",
