render friendly code

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,15 @@ services:
     env: static
     buildCommand: npm run build
     staticPublishPath: ./dist
+    headers:
+      - source: /*
+        headers:
+          - key: Cache-Control
+            value: no-cache, no-store, must-revalidate
+          - key: Pragma
+            value: no-cache
+          - key: Expires
+            value: "0"
     routes:
       - type: rewrite
         source: /*
