--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4"
   },
@@ -36,6 +38,7 @@
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
+    "@types/react-dnd": "^2.0.36",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
